OO-4776: double check metadata by rename operations